--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 
 [dependencies]
 ark-bn254 = { version = "0.4.0", features = ["std"] }
+# ark-bn254 = { git = "https://github.com/arkworks-rs/curves.git", rev = "36683380", features = ["std"] }
+# ark-bn254 = { git = "https://github.com/0xturboblitz/curves.git", branch = "bigger_bigint", features = ["std"] }
 ark-ff = { version = "0.4.0", features = ["std"] }
 ark-serialize = { version = "0.4", features = ["derive"] }
 byteorder = "1.4.3"
